policies/network/ns1Nginx-coredns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns1nginx-coredns
  namespace: ns1
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
