policies/network/ns1Nginx-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-nginx-deny-all
  namespace: ns1
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Egress
  - Ingress
