policies/network/ns1Nginx-ns3Mongo.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns1nginx-ns3mongodb
  namespace: ns1
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 8080
      protocol: TCP
