policies/network/nsXMongodb.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-ns2mongodb-from-nginx
  namespace: ns2
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: not-nginx
    - namespaceSelector:
        matchLabels:
          tier: frontend
